tests/ui/use_after_move.stderr
Error [E0121]: `a` was given away earlier, so it can't be used here
  --> tests/ui/use_after_move.jet:4:11
    |
  4 |     print(a);
    |           ^
 Why: after a value moves somewhere else, the old name no longer holds it
 Fix: give away a copy instead (`a.clone()`) where it moved
