tests/ui/use_after_move.lex
fn main() {
    val a = "hello";
    val b = a;
    print(a);
    print(b);
}
